# festivity_maps

./: .gitignore  README.md  TODO.md  dino_txt_inference.py  extract_gps.py  main.py  pyproject.toml  setup.py  train_from_labelled_dataset.py  view_results_in_fiftyone.py  visualize_festivity_map.py
doc/: dino_txt_inference.py  labelling.md  usage.md
festivity/: __init__.py  cli.py  db.py  trajectory.py  utils.py
festivity/commands/: __init__.py  add_images.py  extract_gps.py  histogram.py  init.py  map_cmd.py  reset.py  score.py  train.py  trajectory_stats.py  view.py
