[project]
name = "dino-features"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lovely-tensors>=0.1.20",
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
    "torch<=2.7.1",
    "torchvision==0.22.1",
    "tqdm>=4.67.1",
]
